Bug 142387 - FILESAVE DOCX Roundtrip interdependant tracked changes
Summary: FILESAVE DOCX Roundtrip interdependant tracked changes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2021-05-20 07:28 UTC by NISZ LibreOffice Team
Modified: 2021-06-28 07:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word based on attachment 68891 (12.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-05-20 07:28 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer to docx (9.12 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-05-20 07:29 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (79.04 KB, image/png)
2021-05-20 07:30 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document side by side in Word and Writer (74.66 KB, image/png)
2021-05-20 07:30 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-20 07:28:48 UTC
Created attachment 172185 [details]
Example file from Word based on attachment 68891 [details]

This is the docx-version of bug 56266
Attached example file was created by saving attachment 68891 [details] to docx, then a word was deleted from the added text in Word.
This opens correctly in Writer, but saving back to docx is incorrect: the deleted part of the insertion is saved as a deleted text.

Steps to reproduce:
    1. Open attached file
    2. Save as docx, reload in either Writer or Word

Actual results:
There are two insertions and one deletion in the file. Rejecting all changes shows the “inserts” word as accepted.

Expected results:
The hierarchy of the insertion and deletion is kept. Rejecting all changes removes the “inserts” word as well.

LibreOffice details:
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 91330c503b7eb91d777978018b66890af87cf8f5
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-05-20 07:29:22 UTC
Created attachment 172186 [details]
The original file saved by Writer to docx
Comment 2 NISZ LibreOffice Team 2021-05-20 07:30:24 UTC
Created attachment 172187 [details]
Screenshot of the original document side by side in Word and Writer

This shows that Writer already breaks the changes in three, but accepting and deleting gives the same result as in Word.
Comment 3 NISZ LibreOffice Team 2021-05-20 07:30:45 UTC
Created attachment 172188 [details]
Screenshot of the exported document side by side in Word and Writer
Comment 4 Dieter 2021-06-04 07:25:50 UTC
I confirm it with

Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 4a9eef7849a75ba91806886ea9c96d114c8d56f9
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 5 Commit Notification 2021-06-12 10:25:51 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eeee19b3fcf8b0374c361c7f6c285fd5c89b5a2f

tdf#142387 DOCX track changes: export w:del in w:ins

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2021-06-27 10:53:40 UTC Comment hidden (obsolete)
Comment 7 László Németh 2021-06-28 07:20:25 UTC
(In reply to Dieter from comment #6)
> Verified with
> 
> Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: 949658028e722e5d2657b503eb20e16e41dbd8cf
> CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL:
> win
> Locale: de-DE (de_DE); UI: en-GB
> Calc: CL

@Dieter: thanks for verifying!