tdf#142387 DOCX track changes: export w:del in w:ins

by processing stack (revision history) of redline ranges,
see GetStackCount() and GetRedlineData().

Change-Id: I7a9085bc1598f0a5e3ab4de6887a12e81738d4f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117069
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit eeee19b3fcf8b0374c361c7f6c285fd5c89b5a2f)